--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>波士帮</title>
-		<meta name="description" content="波士帮">
+		<title>电信卡</title>
+		<meta name="description" content="电信卡">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta content="yes" name="apple-mobile-web-app-capable">
