首页设置读取cookie若有token则写入localstorage的user

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<link rel="shortcut icon" href="/static/img/128.png" type="image/x-icon">
 		<link rel="icon" href="/static/img/32.png" sizes="32x32">
 		<link rel="apple-touch-icon-precomposed" href="/static/img/128.png" sizes="128x128">
+		<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 	</head>
 	<body class="mapp">
 		<style type="text/css">
